fix: main swipe animation
* add transition for main/lists
* remove swipe event if landscape

--- a/assets/app.html
+++ b/assets/app.html
@@ -59,7 +59,7 @@
   </nav>
 </header>
 <main dir="auto">
-  <section class="lists full">
+  <section id="lists" class="lists full">
     <article id="list0" class="full list scrollable">
       <ol id="list-items0" class="list-items"></ol>
     </article>
