fix: add theme-color to html

--- a/assets/app.html
+++ b/assets/app.html
@@ -8,6 +8,7 @@
 <meta name="apple-mobile-web-app-title" content="Music">
 <link rel="stylesheet" type="text/css" href="/assets/app.css">
 <link rel="manifest" href="/assets/manifest.json">
+<meta name="theme-color" content="#ffffff"/>
 <link rel="apple-touch-icon" sizes="192x192" href="/assets/app-black.png">
 <link rel="apple-touch-startup-image" href="/assets/w.png">
 <!--
