--- a/assets/app.html
+++ b/assets/app.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" type="text/css" href="/assets/app.css">
 <link rel="manifest" href="/assets/manifest.json">
 <meta name="theme-color" content="#ffffff"/>
+<meta name="Description" content="Music Player Daemon Client">
 <link rel="apple-touch-icon" sizes="192x192" href="/assets/app-black.png">
 <link rel="apple-touch-startup-image" href="/assets/w.png">
 <!--
