--- a/assets/app.html
+++ b/assets/app.html
@@ -14,7 +14,8 @@ html {
   display: none;
 }
 </style>
-<link rel="preload" as="style" href="assets/app.css" type="text/css" media="all" onload="this.rel='stylesheet'">
+<!-- <link rel="preload" as="style" href="assets/app.css" type="text/css" media="all" onload="this.rel='stylesheet'"> -->
+<link rel="stylesheet" href="assets/app.css">
 <link rel="manifest" href="/assets/manifest.json">
 <meta name="theme-color" content="#ffffff"/>
 <meta name="Description" content="Music Player Daemon Client">
