add mpd version

--- a/assets/app.html
+++ b/assets/app.html
@@ -386,6 +386,15 @@ html {
       <ul class="information-list">
         <li class="license-box information-box">
           <div>
+            <span class="product-name">Music Player Daemon</span>
+            <span class="product-version" id="mpd-version"></span>
+          </div>
+          <div class="link">
+            <a class="product-link" href="https://www.musicpd.org">https://www.musicpd.org</a>
+            <a class="license-link" href="https://github.com/MusicPlayerDaemon/MPD/blob/master/COPYING">{{ or .GPLv2 "GNU General Public License v2.0" }}</a>
+          </div>
+        <li class="license-box information-box">
+          <div>
             <span class="product-name">github.com/gorilla/websocket</span>
           </div>
           <div class="link">
