--- a/assets/app.html
+++ b/assets/app.html
@@ -349,8 +349,6 @@ html {
             <div class="system-setting-desc">{{ or .Uptime "Uptime:" }}</div><div class="system-setting-value" id=stat-uptime></div>
           <li class="list-item system-setting">
             <div class="system-setting-desc">{{ or .LastLibraryUpdate "Last library update:" }}</div><time class="system-setting-value" id=stat-db-update></time>
-          <li class="list-item system-setting">
-            <div class="system-setting-desc">{{ or .Websockets "Websockets:" }}</div><div class="system-setting-value" id=stat-websockets></div>
       </article>
     </article>
 
@@ -388,19 +386,20 @@ html {
       <ul class="information-list">
         <li class="license-box information-box">
           <div>
+            <span class="product-name">Music Player Daemon</span>
+            <span class="product-version" id="mpd-version"></span>
+          </div>
+          <div class="link">
+            <a class="product-link" href="https://www.musicpd.org">https://www.musicpd.org</a>
+            <a class="license-link" href="https://github.com/MusicPlayerDaemon/MPD/blob/master/COPYING">{{ or .GPLv2 "GNU General Public License v2.0" }}</a>
+          </div>
+        <li class="license-box information-box">
+          <div>
             <span class="product-name">github.com/gorilla/websocket</span>
           </div>
           <div class="link">
             <a class="product-link" href="https://github.com/gorilla/websocket">https://github.com/gorilla/websocket</a>
             <a class="license-link" href="https://github.com/gorilla/websocket/blob/master/LICENSE">{{ or .BSD2ClauseLicense "BSD 2-clause license" }}</a>
-          </div>
-        <li class="license-box information-box">
-          <div>
-            <span class="product-name">github.com/meiraka/gompd</span>
-          </div>
-          <div class="link">
-            <a class="product-link" href="https://github.com/meiraka/gompd">https://github.com/meiraka/gompd</a>
-            <a class="license-link" href="https://github.com/meiraka/gompd/blob/master/LICENSE">{{ or .MITLicense "MIT license" }}</a>
           </div>
         <li class="license-box information-box">
           <div>
