update license link

--- a/assets/app.html
+++ b/assets/app.html
@@ -462,6 +462,15 @@ html {
               <a class="product-link" href="https://go.googlesource.com/text">https://go.googlesource.com/text</a>
               <a class="license-link" href="https://go.googlesource.com/text/+/master/LICENSE">{{ or .BSD3ClauseLicense "BSD 3-clause license" }}</a>
             </div>
+          <li class="license-box information-box">
+            <div>
+              <span class="product-name">gopkg.in/yaml.v2</span>
+            </div>
+            <div class="link">
+              <a class="product-link" href="https://github.com/go-yaml/yaml">https://github.com/go-yaml/yaml</a>
+              <a class="license-link" href="https://github.com/go-yaml/yaml/blob/v2/LICENSE">{{ or .ApacheLicense2_0 "Apache License 2.0" }}</a>
+              <a class="license-link" href="https://github.com/go-yaml/yaml/blob/v2/LICENSE.libyaml">{{ or .MITLicense "MIT license" }}</a>
+            </div>
         </ul>
       </article>
     </div>
