show output plugin name

--- a/assets/app.html
+++ b/assets/app.html
@@ -380,7 +380,10 @@ html {
           <ul class="system-settings" id="devices"></ul>
           <template id="device-template">
             <li class="system-setting list-item">
-              <div class="system-setting-desc"></div>
+              <div class="system-setting-desc-box">
+                <div class="system-setting-desc"></div>
+                <div class="system-setting-desc-help plugin"></div>
+              </div>
               <input class="slideswitch" type="checkbox">
             </li>
           </template>
