--- a/assets/app.html
+++ b/assets/app.html
@@ -30,6 +30,7 @@ html {
 <body class="unload light {{ or .direction "ltr" }}">
 <div id="background" class="background">
   <div id="background-image" class="background-image"></div>
+  <div id="background-image2" class="background-image"></div>
   <div id="background-overlay" class="background background-overlay"></div>
 </div>
 <header>
@@ -117,7 +118,8 @@ html {
   </div>
   <div id="main" class="full main">
     <div id="main-cover" class="main-cover">
-      <div id="main-cover-img" class="main-cover-img"></div>
+      <img id="main-cover-img" class="main-cover-img"></img>
+      <img id="main-cover-img2" class="main-cover-img"></img>
       <svg id="main-cover-circle" class="main-cover-circle" width="200" height="200" viewBox="0 0 200 200">
           <path id="main-cover-circle-active" class="stroke" d=""></path>
           <path class="main-cover-circle-inactive stroke" d="M 100,10 L 100,10 A 90,90 0 0,1 100,190 L 100,190 A 90,90 0 0,1 100,10"></path>
@@ -301,6 +303,9 @@ html {
             <li class="list-item system-setting">
               <div class="system-setting-desc" id="appearance-circled-image-label">{{ or .CircledImage "Circled image" }}</div>
               <input type="checkbox" id="appearance-circled-image" class="slideswitch" aria-labelledby="appearance-circled-image-label">
+            <li class="list-item system-setting">
+              <div class="system-setting-desc" id="appearance-crossfading-image-label">{{ or .CrossfadingImage "Crossfading image" }}</div>
+              <input type="checkbox" id="appearance-crossfading-image" class="slideswitch" aria-labelledby="appearance-crossfading-image-label">
           </ul>
         </div>
         <h2 class="system-article-sub-header">{{ or .Playlist "Playlist" }}</h2>
