--- a/assets/app.html
+++ b/assets/app.html
@@ -365,8 +365,7 @@ html {
           <ul class="system-settings">
             <li class="list-item system-setting">
               <button id=library-rescan class="system-setting-value button-simple" type="button">{{ or .RescanSongs "Rescan Songs" }}</button>
-            <li class="list-item system-setting">
-              <button id=library-rescan-images class="system-setting-value button-simple" type="button">{{ or .RescanImages "Rescan Images" }}</button>
+              <button id=library-rescan-images class="system-setting-value button-simple" type="button">{{ or .RescanCoverArt "Rescan Cover art" }}</button>
             <li class="list-item system-setting">
               <div class="system-setting-desc">{{ or .LastLibraryUpdate "Last library update:" }}</div><time class="system-setting-value" id=stat-db-update>0</time>
             <li class="list-item system-setting">
